--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Chezzz"
         xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Loaded="MainWindow_OnLoaded" Closing="MainWindow_OnClosing" Height="450" Width="800">
+        Title="MainWindow" Loaded="MainWindow_OnLoaded" Height="450" Width="800">
     <DockPanel LastChildFill="true">
         <Menu Name="Menu" DockPanel.Dock="Top">
             <MenuItem  Header="File">
