--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,16 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Chezzz"
         xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         mc:Ignorable="d"
         Title="MainWindow" Loaded="MainWindow_OnLoaded" Height="450" Width="800">
     <DockPanel LastChildFill="true">
-        <Menu Name="Menu" DockPanel.Dock="Top">
-            <MenuItem  Header="File">
-                <MenuItem Header="Exit" />
-            </MenuItem>
-        </Menu>
         <StatusBar DockPanel.Dock="Bottom">
             <StatusBar.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -20,19 +14,15 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                     </Grid>
                 </ItemsPanelTemplate>
             </StatusBar.ItemsPanel>
             <StatusBarItem Grid.Column="0">
-                <Button Name="Advice" Click="Advice_OnClick" IsEnabled="True">Advice</Button>
+                <Button Name="Advice" Click="Advice_OnClick" IsEnabled="True">&#160;Advice&#160;</Button>
             </StatusBarItem>
             <StatusBarItem Grid.Column="1">
                 <TextBlock Name="Status" />
-            </StatusBarItem>
-            <StatusBarItem Grid.Column="2" HorizontalAlignment="Right">
-                <TextBlock Name="BackgroundStatus" Foreground="DarkGray" />
             </StatusBarItem>
         </StatusBar>
         <wv2:WebView2 Name="webView2" Source="https://www.chess.com"/>
